--- a/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/App_client/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -353,7 +353,7 @@
 								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="User" asp-action="GetallUser">Người dùng</a></li>
 								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="Rank" asp-action="Index">Cấp độ</a></li>
 								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="User" asp-action="Index">Sản phẩm</a></li>
-
+								<li class="nav-item"> <a class="nav-link" asp-area="Admin" asp-controller="CRUDSize" asp-action="AllSize">Size</a></li>
 							</ul>
 						</div>
 					</li>		
