--- a/App_client/Views/Product/Details.cshtml
+++ b/App_client/Views/Product/Details.cshtml
@@ -55,7 +55,7 @@
 							<div class="input-group-prepend">
 								<button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
 							</div>
-							<input type="text" class="form-control text-center" name="slsp" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+							<input type="text" class="form-control text-center" name="slsp" value="1" placeholder="" min="1" max="100" aria-label="Example text with button addon" aria-describedby="button-addon1">
 							<div class="input-group-append">
 								<button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
 							</div>
