--- a/App_client/Views/Checkour/billdetail.cshtml
+++ b/App_client/Views/Checkour/billdetail.cshtml
@@ -1,59 +1,76 @@
-﻿@model IEnumerable<App_Shared.Model.BillDetails>
+﻿@using App_Shared.Model;
+@model IEnumerable<App_Shared.Model.BillDetails>
 
 @{
-    ViewData["Title"] = "billdetail";
+	ViewData["Title"] = "billdetail";
+	var listproduct = ViewData["billdetail"] as List<Product>;
+	List<string>
+		imageExtensions = new List<string>
+			()
+								   {
+		".png", ".jpg", ".jpeg", ".gif", ".tiff", ".pdf"
+								   };
 }
 
-<h1>billdetail</h1>
+<div class="container text-center">
+<h3>Sản phẩm trong hóa đơn </h3>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Prices)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BillID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductID)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Prices)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BillID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductID)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
+	<thead>
+		<tr>
+			<th>
+				Hình ảnh
+			</th>
+			<th>
+				Sản phẩm
+			</th>
+			<th>
+				số lượng
+			</th>
+			<th>
+				Giá tiền
+			</th>
+
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in Model)
+		{
+			<tr>
+
+				@foreach (var a in listproduct)
+				{				
+						string extension = System.IO.Path.GetExtension(a.ImageUrl);
+					
+
+					@if (a.Id == item.ProductID) // Giả sử có một thuộc tính ProductID để so sánh
+					{
+						<td>
+							<img src="~/images/@a.ImageUrl" alt="Image placeholder" style="width:100px;height:100px" class="img-fluid"><!-- Hiển thị tên sản phẩm -->
+						</td>
+					}
+				}
+				@foreach (var a in listproduct)
+				{
+					@if (a.Id == item.ProductID) // Giả sử có một thuộc tính ProductID để so sánh
+					{
+						<td>
+							@a.Name <!-- Hiển thị tên sản phẩm -->
+						</td>
+					}
+				}
+				<td>
+					@Html.DisplayFor(modelItem => item.Quantity)
+				</td>
+				<td>
+					@Html.DisplayFor(modelItem => item.Prices)
+				</td>
+				<td>
+				</td>
+			</tr>
+		}
+	</tbody>
 </table>
+
+</div>
