--- a/App_client/Views/Shared/_Layout.cshtml
+++ b/App_client/Views/Shared/_Layout.cshtml
@@ -32,9 +32,9 @@
 					<div class="row align-items-center">
 
 						<div class="col-6 col-md-4 order-2 order-md-1 site-search-icon text-left">
-							<form action="" class="site-block-top-search">
+							<form asp-action="Search" asp-controller="Product" method="get" class="site-block-top-search">
 								<span class="icon icon-search2"></span>
-								<input type="text" class="form-control border-0" placeholder="Search">
+								<input type="text" class="form-control border-0" placeholder="Search" name="search">
 							</form>
 						</div>
 
@@ -43,6 +43,7 @@
 								<a href="index.html" class="js-logo-clone">Shoppers</a>
 							</div>
 						</div>
+						
 
 						@if (User.IsInRole("User"))
 						{
