--- a/App_client/Areas/Admin/Views/Voucher/Index.cshtml
+++ b/App_client/Areas/Admin/Views/Voucher/Index.cshtml
@@ -16,7 +16,7 @@
                 Tên voucher
             </th>
             <th>
-                Phần trăm giảm
+                Số tiền giảm
             </th>
             <th>
                 Ngày bắt đầu
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Status)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id  }) |
+                @Html.ActionLink("Edit", "Edit", new { id=item.Id  }) | 
                     @Html.ActionLink("Details", "Details", new { id=item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
