--- a/App_client/Views/Product/Index.cshtml
+++ b/App_client/Views/Product/Index.cshtml
@@ -6,110 +6,48 @@
 	List<string>
 			imageExtensions = new List<string>
 				()
-							   {
+									   {
 		".png", ".jpg", ".jpeg", ".gif", ".tiff", ".pdf"
-							   };
-}
-<select class="form-select" aria-label="Default select example">
-	<option selected>tìm kiếm theo giá</option>
-	<option value="Tang"><a asp-action="Tang">Tăng dần</a></option>
-	<option value="Giam"><a asp-action="Giam">Giảm dần</a> </option>
-</select>
-<a asp-action="Index" asp-route-name="Tang">Tăng dần</a>
-<a asp-action="Index" asp-route-name="Giam">Giảm dần</a>
-
+									   };
+									   }
 
 <div class="container">
+
+<div>
+	<select class="form-select" aria-label="Default select example">
+		<option selected>tìm kiếm theo giá</option>
+		<option value="Tang"><a asp-action="Tang">Tăng dần</a></option>
+		<option value="Giam"><a asp-action="Giam">Giảm dần</a> </option>
+	</select>
+	<a asp-controller="Product" asp-action="Tang" asp-route-name="Tang">Tăng dần</a>
+		<a asp-controller="Product" asp-action="Giam" asp-route-name="Giam">Giảm dần</a>
+
+</div>
 	<div class="row mb-5 mt-5">
-	<div class="col-md-9 order-2">
-		<div class="row mb-5">
+		<div class="col-md-12 order-2">
+			<div class="row mb-5">
 
-			@foreach (var item in Model)
-			{
+				@foreach (var item in Model)
+				{
 
-				<div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
-					<div class="block-4 text-center border">
-						<figure class="block-4-image">
+					<div class="col-sm-4 col-lg-3 mb-3" data-aos="fade-up">
+						<div class="block-4 text-center border">
+							<figure class="block-4-image">
 								@{
 									string extension = System.IO.Path.GetExtension(item.ImageUrl);
 								}
-								<a asp-controller="Product" asp-action="Details" asp-route-id="@item.Id"><img src="~/images/@item.ImageUrl" alt="Image placeholder" class="img-fluid"></a>
-						</figure>
-						<div class="block-4-text p-4">
-							<h3><a asp-controller="Product" asp-action="Details" asp-route-id="@item.Id">@item.Name</a></h3>
-							<p class="mb-0">@item.Description</p>
-							<p class="text-primary font-weight-bold">$@item.Price</p>
+								<a asp-controller="Product" asp-action="Details" asp-route-id="@item.Id"><img src="~/images/@item.ImageUrl" style="width:253px" height="200px" alt="Image placeholder"></a>
+							</figure>
+							<div class="block-4-text p-4">
+								<h3><a asp-controller="Product" asp-action="Details" asp-route-id="@item.Id">@item.Name</a></h3>
+								<p class="mb-0">@item.Description</p>
+								<p class="text-primary font-weight-bold">$@item.Price</p>
+							</div>
 						</div>
 					</div>
-				</div>
-			}
-		</div>
-		<div class="row" data-aos="fade-up">
-			<div class="col-md-12 text-center">
-				<div class="site-block-27">
-					<ul>
-						<li><a href="#">&lt;</a></li>
-						<li class="active"><span>1</span></li>
-						<li><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-						<li><a href="#">5</a></li>
-						<li><a href="#">&gt;</a></li>
-					</ul>
-				</div>
+				}
 			</div>
 		</div>
+
 	</div>
-
-	<div class="col-md-3 order-1 mb-5 mb-md-0">
-		<div class="border p-4 rounded mb-4">
-			<h3 class="mb-3 h6 text-uppercase text-black d-block">Categories</h3>
-			<ul class="list-unstyled mb-0">
-				<li class="mb-1"><a href="#" class="d-flex"><span>Men</span> <span class="text-black ml-auto">(2,220)</span></a></li>
-				<li class="mb-1"><a href="#" class="d-flex"><span>Women</span> <span class="text-black ml-auto">(2,550)</span></a></li>
-				<li class="mb-1"><a href="#" class="d-flex"><span>Children</span> <span class="text-black ml-auto">(2,124)</span></a></li>
-			</ul>
-		</div>
-
-		<div class="border p-4 rounded mb-4">
-			<div class="mb-4">
-				<h3 class="mb-3 h6 text-uppercase text-black d-block">Filter by Price</h3>
-				<div id="slider-range" class="border-primary"></div>
-				<input type="text" name="text" id="amount" class="form-control border-0 pl-0 bg-white" disabled="" />
-			</div>
-
-			<div class="mb-4">
-				<h3 class="mb-3 h6 text-uppercase text-black d-block">Size</h3>
-				<label for="s_sm" class="d-flex">
-					<input type="checkbox" id="s_sm" class="mr-2 mt-1"> <span class="text-black">Small (2,319)</span>
-				</label>
-				<label for="s_md" class="d-flex">
-					<input type="checkbox" id="s_md" class="mr-2 mt-1"> <span class="text-black">Medium (1,282)</span>
-				</label>
-				<label for="s_lg" class="d-flex">
-					<input type="checkbox" id="s_lg" class="mr-2 mt-1"> <span class="text-black">Large (1,392)</span>
-				</label>
-			</div>
-
-			<div class="mb-4">
-				<h3 class="mb-3 h6 text-uppercase text-black d-block">Color</h3>
-				<a href="#" class="d-flex color-item align-items-center">
-					<span class="bg-danger color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Red (2,429)</span>
-				</a>
-				<a href="#" class="d-flex color-item align-items-center">
-					<span class="bg-success color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Green (2,298)</span>
-				</a>
-				<a href="#" class="d-flex color-item align-items-center">
-					<span class="bg-info color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Blue (1,075)</span>
-				</a>
-				<a href="#" class="d-flex color-item align-items-center">
-					<span class="bg-primary color d-inline-block rounded-circle mr-2"></span> <span class="text-black">Purple (1,075)</span>
-				</a>
-			</div>
-
-		</div>
-	</div>
-</div>
-
-
 </div>
