--- a/App_client/Views/Product/Details.cshtml
+++ b/App_client/Views/Product/Details.cshtml
@@ -54,7 +54,14 @@
 						</div>
 
 					</div>
-					<input type="submit" value="Addtocart"></input>
+					@if (User.IsInRole("User"))
+					{
+						<input type="submit" value="Addtocart"></input>
+					}
+					else
+					{
+						
+					}
 				</form>
 
 
