--- a/App_client/Views/Shared/_Layout.cshtml
+++ b/App_client/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
 							<div class="col-6 col-md-4 order-3 order-md-3 text-right">
 								<div class="site-top-icons">
 									<ul>
-										<li><a asp-controller="Login" asp-action="Logout"><span class="icon icon-person"></span></a></li>
-										  <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
+										<li><a asp-controller="User" asp-action="Index"><span class="icon icon-person"></span></a></li>
+										<li><a asp-controller="FavoriteProducts" asp-action="Index"><span class="icon icon-heart-o"></span></a></li>
                                         <li>
                                             <a asp-controller="Cart" asp-action="Index" class="site-cart">
                                                 <span class="icon icon-shopping_cart"></span>
